tests/e2e/service_output_readonly.story
when foo_service listen as event
    event = 2
